<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocalizadorMQ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="update_button_name">Update</string>
    <string name="rotate_button_name">Rotate</string>
    <string name="room">Room</string>
    <string name="befriend">Befriend</string>
    <string name="username">Username</string>
    <string name="showGroups">Show Groups</string>
    <string name="eventName">Event</string>
    <string name="api_key"></string>
    
    
    
    <string name="profileImageText">Avatar</string>
    <string name="subscribeText">Subscribed</string>
    <string name="eventButton">Button</string>
    <string name="eventDuration">Duration</string>
    <string name="eventDate">Date</string>

    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Find Groups</item>
        <item >Find Rooms</item>
    </string-array>
    
     <string-array name="time_interval_array">
        <item>Next Class</item>
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>This Semester</item>
    </string-array>
    
</resources>
