<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="locator.localizadormq.MainActivity" >

    <TextView
        android:id="@+id/showUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:text="@string/username" />

    <Button
        android:id="@+id/befriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/showUserName"
        android:layout_marginTop="24dp"
        android:text="@string/befriend" />

    <Button
        android:id="@+id/showUserShowGroups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/befriend"
        android:text="@string/showGroups" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/showUserShowGroups"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/showUserShowGroups"
		android:layout_toEndOf="@+id/showUserShowGroups" >
        <TextView
            android:id="@+id/profileImageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileImageText" />

    </FrameLayout>

</RelativeLayout>
